--- a/pflichtenheft/8gruppe_pflichtenheft_01.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_01.tex
@@ -6,8 +6,4 @@ Die FastForward GmbH nutzt momentan einen IPv4-only-Anschluss und bekommt von ih
 
 \subsection{Zielsetzung}
 
-Es soll zunächst eine Testumgebung erstellt werden, die intern nur auf IPv6 basiert. Die Verbindung in das öffentliche Internet wird über einen Tunnel-Broker realisiert. In dieser Testumgebung sollen ein Web- und ein Mailserver betrieben werden, die öffentlich erreichbar sind. Optional ist darüber hinaus die Installation eines Active Directory und eines Domain Controllers.\\
-
-\noindent{\bf Muss-Kriterien}: Der Zugriff auf das öffentliche IPv6-Internet muss über eine IPv4-Adresse des Providers aus dem internen IPv6-Netzwerkmöglich sein. Die interne Netzwerkommunikation eines Web- und eines Mailservers muss dabei vollständig mit IPv6 realisiert werden. Clients müssen ebenfalls per IPv6 kommunizieren können. Die Testumgebung ist durch eine Firewall zu schützen. \\
-{\bf Wunschkriterien}: Optinal kann ein Active Directory und ein Domain Controller eingerichtet werden. Clients soll es möglich sein, sich in der Domäne anzumelden. \\
-{\bf Abgrenzungskriterien}: Es handelt sich hierbei lediglich um eine Testumgebung. Sie ist nicht für den produktiven Einsatz geeignet.
+Es soll zunächst eine Testumgebung erstellt werden, die intern nur auf IPv6 basiert. Die Verbindung in das öffentliche Internet wird über einen Tunnel-Broker realisiert. In dieser Testumgebung sollen ein Web- und ein Mailserver betrieben werden, die öffentlich erreichbar sind. Optional ist darüber hinaus die Installation eines Active Directory und eines Domain Controllers.
