--- a/pflichtenheft/8gruppe_pflichtenheft_04.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_04.tex
@@ -1,6 +1,6 @@
 \section{Produktfunktionen}
 
-Im Rahmen des Projektes wird ein Segement des Netzwerkes der FastForward GmbH per IPv6 mit dem Internet verbunden. Damit Verbindungen zum IPv4-Internet möglich sind, wird ein Tunnel-Broker verwendet. Wir haben uns für die Verwendung von SIXXS verwendet. 
+Im Rahmen des Projektes wird ein Segement des Netzwerkes der FastForward GmbH per IPv6 mit dem Internet verbunden. Damit Verbindungen zum IPv4-Internet möglich sind, wird ein Tunnel-Broker verwendet. Wir haben uns für die Verwendung von SixXS verwendet. 
 
 Welche Funktionen bietet unser Produkt?
 
