--- a/pflichtenheft/8gruppe_pflichtenheft_06.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_06.tex
@@ -1,2 +1,7 @@
 \section{Produktleistungen}
 
+
+
+\noindent{\bf Muss-Kriterien}: Der Zugriff auf das öffentliche IPv6-Internet muss über eine IPv4-Adresse des Providers aus dem internen IPv6-Netzwerkmöglich sein. Die interne Netzwerkommunikation eines Web- und eines Mailservers muss dabei vollständig mit IPv6 realisiert werden. Clients müssen ebenfalls per IPv6 kommunizieren können. Die Testumgebung ist durch eine Firewall zu schützen. \\
+{\bf Wunschkriterien}: Optinal kann ein Active Directory und ein Domain Controller eingerichtet werden. Clients soll es möglich sein, sich in der Domäne anzumelden. \\
+{\bf Abgrenzungskriterien}: Es handelt sich hierbei lediglich um eine Testumgebung. Sie ist nicht für den produktiven Einsatz geeignet.
