Pflichtenheft konsolidiert, beachte todo

--- a/pflichtenheft/8gruppe_pflichtenheft_00_main.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_00_main.tex
@@ -73,6 +73,8 @@ colorlinks=true,
 linkcolor=black							% Definiert die Farbe der Links vom Inhaltsverzeichnis
 }										% zu den Sections im Dokument
 
+\usepackage{wrapfig}
+
 %%% Ende: Generelle Inforationen über das Dokument %%%
 
 \setcounter{secnumdepth}{0} 				% Entfernt Nummerierung im TOC
@@ -85,23 +87,24 @@ linkcolor=black							% Definiert die Farbe der Links vom Inhaltsverzeichnis
 \pagestyle{fancy}
 \setcounter{page}{1}
 
+\include{8gruppe_pflichtenheft_00_kapitel}
 % Anforderungsbeschreibung
-\include{8gruppe_pflichtenheft_01}
+%\include{8gruppe_pflichtenheft_01}
 % Produkteinsatz
-\include{8gruppe_pflichtenheft_02}
+%\include{8gruppe_pflichtenheft_02}
 % Produktumgebung
-\include{8gruppe_pflichtenheft_03}
+%\include{8gruppe_pflichtenheft_03}
 % Produktfunktionen
-\include{8gruppe_pflichtenheft_04}
+%\include{8gruppe_pflichtenheft_04}
 % Produktdaten
-\include{8gruppe_pflichtenheft_05}
+%\include{8gruppe_pflichtenheft_05}
 % Produktleistungen
-\include{8gruppe_pflichtenheft_06}
+%\include{8gruppe_pflichtenheft_06}
 % Qualitaetsbestimmung
-\include{8gruppe_pflichtenheft_07}
+%\include{8gruppe_pflichtenheft_07}
 % Globale Testfaelle
-\include{8gruppe_pflichtenheft_08}
-%
-\include{8gruppe_pflichtenheft_09}
+%\include{8gruppe_pflichtenheft_08}
+% Ergaenzungen
+%\include{8gruppe_pflichtenheft_09}
 
 \end{document}
