--- a/pflichtenheft/8gruppe_pflichtenheft_05.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_05.tex
@@ -6,10 +6,17 @@ Mithilfe des Cisco Routers wird sowohl die Firewall als auch die Trennung des in
 
 \subsection{Skizzierung der Umsetzung}
 
-Die gezeigte Grafik beschreibt die von uns angestrebte, logische Umsetzung der Umgebung. Sowohl die Server als auch die Clients werden über den vorhandenen Cisco Switch verbunden. Der Switch wird per Router mit dem Internet (WAN) verbunden.
-
-\begin{figure}[h]
-\includegraphics[scale=1]{../8gruppe_packettracer/8gruppe_netzaufbau.png}
+\begin{wrapfigure}{r}{0.5\textwidth}
+\includegraphics[scale=0.5]{../packettracer/8gruppe_netzaufbau.png}
 \label{skizzierung-umsetzung}
 \caption{Skizzierung der Umgebung}
-\end{figure}
+\end{wrapfigure}
+
+Die gezeigte Grafik beschreibt die von uns angestrebte, logische Umsetzung der Umgebung. Sowohl die Server als auch die Clients werden über den vorhandenen Cisco Switch miteinander verbunden. Der Switch wird per Router mit dem Internet (WAN) verbunden. Auf dem Router wird eine Firewall implementiert.
+
+
+
+
+
+
+
