--- a/pflichtenheft/8gruppe_pflichtenheft_08.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_08.tex
@@ -1,5 +1,33 @@
 \section{Globale Testfälle}
 
+Wir unterscheiden vier Kategorien von globalen Testfällen. Die erste Kategorie umfasst die Funktionen des Mail- und Webserver und die zweite die Funktion des lokalen Netzwerkes. In der dritten Kategorie werden alle Tests zusammengefasst, die den Zugriff der Clients auf die Server betreffen. Abschließend wird in der vierten Kategorie getestet, ob das Netzwerksegment aus dem öffentlichen Internet erreichbar ist und ob die Services in der DMZ genutzt werden können.
+
+\begin{enumerate}
+	\item Mail- und Webserver
+		\begin{itemize}
+			\item 
+			\item 
+			\item 
+		\end{itemize}
+	\item Lokales Netzwerk 
+		\begin{itemize}
+			\item 
+			\item 
+			\item 
+		\end{itemize}
+	\item Clients
+		\begin{itemize}
+			\item 
+			\item 
+			\item 
+		\end{itemize}
+	\item Zugriff aus dem Internet
+		\begin{itemize}
+			\item 
+			\item 
+			\item 
+		\end{itemize}
+\end{enumerate}
 
 
 
