--- a/pflichtenheft/8gruppe_pflichtenheft_00_kapitel.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_00_kapitel.tex
@@ -74,7 +74,25 @@ Welche Szenarien müssen betrachtet werden?
 
 
 \section{Globale Testfälle}
-
+Die folgenden Testfälle wurden zur Bestimmung der Funktionalität erstellt.
+\subsection{Funktion in der DMZ}
+\begin{description}
+\item [T01] Ein IPv6 Netzt ist verfügbar.
+\item [T02] Im Netzwerk funktionieren keine IPv4 Konfigurationen.
+\item [T03] Systeme im LAN und WAN sind pingbar.
+\item [T04] Websites können aufgerufen werden.
+\item [T05] Emails können gesendet und empfangen werden
+\end{description}
+\subsection{Funktion des Clienten}
+\begin{description}
+\item [T01] Ein IPv6 Netzt ist verfügbar.
+\item [T02] Im Netzwerk funktionieren keine IPv4 Konfigurationen.
+\item [T03] Systeme in der DMZ und im WAN sind pingbar.
+\item [T04] Websites können aufgerufen werden. (WAN & DMZ)
+\item [T05] Emails können gesendet und empfangen werden.
+\item [T06] Eine Windows Domände ist verfügbar.
+\item [T07] Der Client kann sich gegen die Domände authentifizieren.
+\end{description}
 
 
 
