--- a/pflichtenheft/8gruppe_pflichtenheft_00_main.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_00_main.tex
@@ -40,7 +40,7 @@
 
 %%% Zeilenabstand %%%
 \usepackage{setspace}
-%\onehalfspacing %auskommentiert wird durchgehend einfacher Zeilenabstand verwendet
+\onehalfspacing %auskommentiert wird durchgehend einfacher Zeilenabstand verwendet
 
 \newcommand{\qr}{\textquotedblleft}		% Definiert eine Abkürzung für dt. Anführungsstriche links
 \newcommand{\ql}{\quotedblbase}			% Definiert eine Abkürzung für dt. Anführungsstriche rechts
@@ -77,7 +77,7 @@ linkcolor=black							% Definiert die Farbe der Links vom Inhaltsverzeichnis
 
 %%% Ende: Generelle Inforationen über das Dokument %%%
 
-\setcounter{secnumdepth}{0} 				% Entfernt Nummerierung im TOC
+%\setcounter{secnumdepth}{0} 				% Entfernt Nummerierung im TOC
 
 \begin{document}
 \pagestyle{empty}
