--- a/pflichtenheft/8gruppe_pflichtenheft_02.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_02.tex
@@ -10,5 +10,5 @@ Die Zielgruppe dieser Machbarkeitsstudie ist die IT-Abteilung des Unternehmens. 
 
 Die Umgebung soll 24 Stunden 7 Tage die Woche betrieben werden. Eine Beobachtung respektive Monitoring der Systeme ist kein Kriterium und findet entsprechend nur während den Arbeitszeiten an den Projekttagen statt.\\
 
-{\bf Hardware}: Es stehen ein Router (Cisco 2800 Series), ein Switch (Cisco Catalyst 2960G Series) und ein no-name Server zur Verfügung. Als Test-Clients werden die eigenen Notebooks verwendet.\\
+\noindent{\bf Hardware}: Es stehen ein Router (Cisco 2800 Series), ein Switch (Cisco Catalyst 2960G Series) und ein no-name Server zur Verfügung. Als Test-Clients werden die eigenen Notebooks verwendet.\\
 {\bf Orgware}: Es muss einen Aktiven Account bei SixXT, eine IPv4 Adresse des Providers und einen MX Record zur Verfügung gestellt werden.
