--- a/dokumente/todo.txt
+++ b/dokumente/todo.txt
@@ -1,8 +1,9 @@
+HHBKFS22: Jahresprojekt - Gruppe 8 -------------------------------- 19.04.2016
+==============================================================================
 TODO:
 - Pflichtenheft
 	* Produktumgebung
 	* Qualitätsbestimmung
-	* Globale Testfälle
 
 - Vorbereitung für die Umsetzung
 	* Test: Installation KVM-Host Ubuntu 16.04
@@ -18,3 +19,8 @@ TODO:
 	* Anlegen der Kapitelstruktur
 	* Netzwerkkonzept
 	* Projektstrukturplan
+
+==============================================================================
+DONE:
+- Pflichtenheft
+	* Globale Testfälle
