--- a/pflichtenheft/8gruppe_pflichtenheft_00_kapitel.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_00_kapitel.tex
@@ -18,19 +18,13 @@ Die Zielgruppe dieser Machbarkeitsstudie ist die IT-Abteilung des Unternehmens. 
 
 Die Umgebung soll 24 Stunden 7 Tage die Woche betrieben werden. Eine Beobachtung respektive Monitoring der Systeme ist kein Kriterium und findet entsprechend nur während den Arbeitszeiten an den Projekttagen statt.\\
 
-{\bf Hardware}: Es stehen ein Router (Cisco 2800 Series), ein Switch (Cisco Catalyst 2960G Series) und ein no-name Server zur Verfügung. Als Test-Clients werden die eigenen Notebooks verwendet.\\
+\noindent{\bf Hardware}: Es stehen ein Router (Cisco 2800 Series), ein Switch (Cisco Catalyst 2960G Series) und ein no-name Server zur Verfügung. Als Test-Clients werden die eigenen Notebooks verwendet.\\
 {\bf Orgware}: Es muss einen Aktiven Account bei SixXT, eine IPv4 Adresse des Providers und einen MX Record zur Verfügung gestellt werden.
-\section{Produktumgebung}
+\section{Produktfunktionen}
 
-Produktumgebung
+Im Rahmen des Projektes wird ein Segement des Netzwerkes der FastForward GmbH per IPv6 mit dem Internet verbunden. Damit Verbindungen zum IPv4-Internet möglich sind, wird ein Tunnel-Broker verwendet. Wir haben uns für die Verwendung von SixXS verwendet. Alternative Tunnel-Broker haben meist nur einen Standort. Beispielsweise IPv6Now in Australien oder 6frei in China. Der ähnlich breitaufgestellte Tunnel-Broker Hurricane Electric scheidet nur deswegen aus, weil SixXS mehr Protokolle unterstützt und damit für unsere Zwecke, die gesamte Kommunikation per IPv6 abzuwickel besser geeignet ist.
 
-Welche Umgebung haben wir innerhalb des Unternehmens? Was ist unsere Ausgangslage\section{Produktfunktionen}
-
-Im Rahmen des Projektes wird ein Segement des Netzwerkes der FastForward GmbH per IPv6 mit dem Internet verbunden. Damit Verbindungen zum IPv4-Internet möglich sind, wird ein Tunnel-Broker verwendet. Wir haben uns für die Verwendung von SixXS verwendet. 
-
-Welche Funktionen bietet unser Produkt?
-
-Die Funktionen unseres Produktes umfassen die Abwicklung der Internetkommunikation per IPv6 und IPv4. Die interne Netzwerkkommunikation wird dabei ausschließlich per IPv6 realisiert.
+Die Funktionen unseres Produktes umfassen die Abwicklung der Internetkommunikation per IPv6 und IPv4. Die interne Netzwerkkommunikation wird dabei ausschließlich per IPv6 realisiert. Damit die internen Clients nicht von außen erreichbar sind, werden zwei Subnetze realisiert, die durch die IPv6-Firewall getrennt werden.
 
 \begin{itemize}
 	\item Ausschließlich IPv6-basiertes Netzsegment
@@ -40,7 +34,6 @@ Die Funktionen unseres Produktes umfassen die Abwicklung der Internetkommunikati
 	\item IPv6-Firewall
 \end{itemize}
 
-Damit die internen Clients nicht von außen erreichbar sind, werden zwei Subnetze realisiert, die durch die IPv6-Firewall getrennt werden.
 \section{Projektumsetzung}
 
 Die Umsetzung der Anforderungen wird mithilfe der bereitgestellten Hardware und des Tunnels über den Broker Sixxs realisiert. Da nur ein Server zur Verfügung steht, aber Server mit verschiedenen Betriebssystemen genutzt werden sollen, wird auf dem vorhandenen no-name Server ein Hypervisor auf Basis von Ubuntu 16.04 installiert. Über diesen werden zwei virtuelle Server eingerichtet. Der eine wird mit Windows 2012R2 betrieben und der andere ebenfalls mit Ubuntu 16.04. Auf letzterem werden sowohl Mailserver als auch Webserver realisiert. Sollte sich dieser Plan nicht umsetzen lassen, wird der no-name Server rein als Mail- und Webserver verwendet werden. Auf einem der Clients wird dann Windows 2012R2 installiert.
@@ -65,48 +58,35 @@ Die gezeigte Grafik beschreibt die von uns angestrebte, logische Umsetzung der U
 
 \section{Produktleistungen}
 
-\noindent{\bf Muss-Kriterien}: Der Zugriff auf das öffentliche IPv6-Internet muss über eine IPv4-Adresse des Providers aus dem internen IPv6-Netzwerkmöglich sein. Die interne Netzwerkommunikation eines Web- und eines Mailservers muss dabei vollständig mit IPv6 realisiert werden. Clients müssen ebenfalls per IPv6 kommunizieren können. Die Testumgebung ist durch eine Firewall zu schützen. {\bf Wunschkriterien}: Optinal kann ein Active Directory und ein Domain Controller eingerichtet werden. Clients soll es möglich sein, sich in der Domäne anzumelden. {\bf Abgrenzungskriterien}: Es handelt sich hierbei lediglich um eine Testumgebung. Sie ist nicht für den produktiven Einsatz geeignet.\section{Qualitätsbestimmung}
-
-Welche Szenarien müssen betrachtet werden?
-
-
-
-
-
-\section{Globale Testfälle}
+\noindent{\bf Muss-Kriterien}: Der Zugriff auf das öffentliche IPv6-Internet muss über eine IPv4-Adresse des Providers aus dem internen IPv6-Netzwerkmöglich sein. Die interne Netzwerkommunikation eines Web- und eines Mailservers muss dabei vollständig mit IPv6 realisiert werden. Clients müssen ebenfalls per IPv6 kommunizieren können. Die Testumgebung ist durch eine Firewall zu schützen. {\bf Wunschkriterien}: Optinal kann ein Active Directory und ein Domain Controller eingerichtet werden. Clients soll es möglich sein, sich in der Domäne anzumelden. {\bf Abgrenzungskriterien}: Es handelt sich hierbei lediglich um eine Testumgebung. Sie ist nicht für den produktiven Einsatz geeignet.\section{Globale Testfälle}
 
 Wir unterscheiden vier Kategorien von globalen Testfällen zur Bestimmung der Funktionalität. Die erste Kategorie umfasst die Funktionen des Mail- und Webserver und die zweite die Funktion des lokalen Netzwerkes. In der dritten Kategorie werden alle Tests zusammengefasst, die den Zugriff der Clients auf die Server betreffen. Abschließend wird in der vierten Kategorie getestet, ob das Netzwerksegment aus dem öffentlichen Internet erreichbar ist und ob die Services in der DMZ genutzt werden können.
 
-\begin{enumerate}
-	\item Mail- und Webserver
-		\begin{itemize}
-			\item[S01] Erreichbarkeit des Mailservers
-			\item[S02] Erreichbarkeit des Webservers
-			\item[S03] Der Webserver kann Mails senden und empfangen
-		\end{itemize}
-	\item Lokales Netzwerk 
-		\begin{itemize}
-			\item[I01] Kommunikation der Server und Clients per IPv6
-			\item[I02] Trennung von Trusted Zone und DMZ per VLAN  
-			\item[I03] Kommunikation per IPv4 findet nicht statt
-		\end{item[]ize}
-	\item Clients
-		\begin{itemize}
-			\item[C01] Kommunikation der Clients mit IPv4-Server im Internet ist möglich
-			\item[C02] Clients können über den Mailserver Emails senden und empfangen
-			\item[C03] (optional) Clients können sich gegen die Windows Domäne authentifizieren
-		\end{itemize}
-	\item Zugriff aus dem Internet
-		\begin{itemize}
-			\item[E01] Mail- und Webserver sind aus dem Internet erreichbar 
-			\item[E02] Clients sind aus dem Internet nicht erreichbar
-			\item[E03] Firewall öffnet nur tatsächlich genutzte Ports 
-		\end{itemize}
-\end{enumerate}
-
+\subsection{Mail- und Webserver}
+\begin{itemize}
+	\item[S01] Erreichbarkeit des Mailservers
+	\item[S02] Erreichbarkeit des Webservers
+	\item[S03] Der Webserver kann Mails senden und empfangen
+\end{itemize}
+\subsection{Lokales Netzwerk}
+\begin{itemize}
+	\item[I01] Kommunikation der Server und Clients per IPv6
+	\item[I02] Trennung von Trusted Zone und DMZ per VLAN
+	\item[I03] Kommunikation per IPv4 findet nicht statt
+\end{itemize}
+\subsection{Funktion der Clients}
+\begin{itemize}
+	\item[C01] Kommunikation der Clients mit IPv4-Server im Internet ist möglich
+	\item[C02] Clients können über den Mailserver Emails senden und empfangen
+	\item[C03] (optional) Clients können sich gegen die Windows Domäne authentifizieren
+\end{itemize}
+\subsection{Zugriff aus dem Internet}
+\begin{itemize}
+	\item[E01] Mail- und Webserver sind aus dem Internet erreichbar
+	\item[E02] Clients sind aus dem Internet nicht erreichbar
+	\item[E03] Firewall öffnet nur tatsächlich genutzte Ports
+\end{itemize}
 
 \section{Ergänzungen}
-
-
 
 Wenn sich das Projekt erfolgreich realisieren lässt, sind für die Umsetzung in der Produktivumgebung noch einige Punkte zu beachten. Zum einen müssten alle nicht IPv6-fähigen Netzwerkgeräte ausgetauscht werden. Dasselbe gilt auch für alle Clients, wenn diese ihre IPv6-Verbindung nicht über einen internen IPv6-Tunnel realisieren. Als Alternative könnte die gesamte interne IPv4-Infrastruktur erhalten bleiben. Statt eines IPv6-zu-IPv4-Tunnels, wie in diesem Projekt verwendet, würde dann ein IPv4-zu-IPv6-Tunnel genutzt. Zum anderen ergibt sich für beide Umsetzungen ein Sicherheitsrisiko, da der jeweilige IPv4- oder IPv6-Netzwerkverkehr in beiden Fällen über einen zentralen Tunnel-Broker geroutet wird. Das bedeutet, dass in beiden Fällen ein eigener Tunnel-Broker betrieben werden.
