--- a/pflichtenheft/8gruppe_pflichtenheft_00_kapitel.tex
+++ b/pflichtenheft/8gruppe_pflichtenheft_00_kapitel.tex
@@ -22,7 +22,7 @@ Die Umgebung soll 24 Stunden 7 Tage die Woche betrieben werden. Eine Beobachtung
 {\bf Orgware}: Es muss einen Aktiven Account bei SixXT, eine IPv4 Adresse des Providers und einen MX Record zur Verfügung gestellt werden.
 \section{Produktfunktionen}
 
-Im Rahmen des Projektes wird ein Segement des Netzwerkes der FastForward GmbH per IPv6 mit dem Internet verbunden. Damit Verbindungen zum IPv4-Internet möglich sind, wird ein Tunnel-Broker verwendet. Wir haben uns für die Verwendung von SixXS verwendet. Alternative Tunnel-Broker haben meist nur einen Standort. Beispielsweise IPv6Now in Australien oder 6frei in China. Der ähnlich breitaufgestellte Tunnel-Broker Hurricane Electric scheidet nur deswegen aus, weil SixXS mehr Protokolle unterstützt und damit für unsere Zwecke, die gesamte Kommunikation per IPv6 abzuwickel besser geeignet ist.
+Im Rahmen des Projektes wird ein Segement des Netzwerkes der FastForward GmbH per IPv6 mit dem Internet verbunden. Damit Verbindungen zum IPv4-Internet möglich sind, wird ein Tunnel-Broker verwendet. Wir haben uns für die Verwendung von SixXS verwendet. Alternative Tunnel-Broker haben meist nur einen Standort. Beispielsweise IPv6Now in Australien oder 6frei in China. Der ähnlich breit aufgestellte Tunnel-Broker Hurricane Electric scheidet nur deswegen aus, weil SixXS mehr Protokolle unterstützt und damit für unsere Zwecke, die gesamte Kommunikation per IPv6 abzuwickeln besser geeignet ist.
 
 Die Funktionen unseres Produktes umfassen die Abwicklung der Internetkommunikation per IPv6 und IPv4. Die interne Netzwerkkommunikation wird dabei ausschließlich per IPv6 realisiert. Damit die internen Clients nicht von außen erreichbar sind, werden zwei Subnetze realisiert, die durch die IPv6-Firewall getrennt werden.
 
@@ -38,7 +38,7 @@ Die Funktionen unseres Produktes umfassen die Abwicklung der Internetkommunikati
 
 Die Umsetzung der Anforderungen wird mithilfe der bereitgestellten Hardware und des Tunnels über den Broker Sixxs realisiert. Da nur ein Server zur Verfügung steht, aber Server mit verschiedenen Betriebssystemen genutzt werden sollen, wird auf dem vorhandenen no-name Server ein Hypervisor auf Basis von Ubuntu 16.04 installiert. Über diesen werden zwei virtuelle Server eingerichtet. Der eine wird mit Windows 2012R2 betrieben und der andere ebenfalls mit Ubuntu 16.04. Auf letzterem werden sowohl Mailserver als auch Webserver realisiert. Sollte sich dieser Plan nicht umsetzen lassen, wird der no-name Server rein als Mail- und Webserver verwendet werden. Auf einem der Clients wird dann Windows 2012R2 installiert.
 
-Mithilfe des Cisco Routers wird sowohl die Firewall als auch die Trennung des internen Netzwerkes in zwei Zonen realisiert. Bei den beiden Zonen handelt es sich um eine DMZ, in der sich der Mail- und Webserver befinden werden und um eine Trusted Zone, in der sich die Clients und der Windows-Server befinden werden. Die beiden Netzwerke erhalten jeweils ein eigenes IPv6-Subnetz und werden zudem durch VLANs voneinander getrennt. Die Firewallregeln, Subnetze und VLANs werde im Netzwerkkonzept beschrieben.
+Mithilfe des Cisco Routers wird sowohl die Firewall als auch die Trennung des internen Netzwerkes in zwei Zonen realisiert. Bei den beiden Zonen handelt es sich um eine DMZ, in der sich der Mail- und Webserver befinden werden und um eine Trusted Zone, in der sich die Clients und der Windows-Server befinden werden. Die beiden Netzwerke erhalten jeweils ein eigenes IPv6-Subnetz und werden zudem durch VLANs voneinander getrennt. Die Firewall Regeln, Subnetze und VLANs werde im Netzwerkkonzept beschrieben.
 
 \subsection{Skizzierung der Umsetzung}
 
@@ -58,7 +58,7 @@ Die gezeigte Grafik beschreibt die von uns angestrebte, logische Umsetzung der U
 
 \section{Produktleistungen}
 
-\noindent{\bf Muss-Kriterien}: Der Zugriff auf das öffentliche IPv6-Internet muss über eine IPv4-Adresse des Providers aus dem internen IPv6-Netzwerkmöglich sein. Die interne Netzwerkommunikation eines Web- und eines Mailservers muss dabei vollständig mit IPv6 realisiert werden. Clients müssen ebenfalls per IPv6 kommunizieren können. Die Testumgebung ist durch eine Firewall zu schützen. {\bf Wunschkriterien}: Optinal kann ein Active Directory und ein Domain Controller eingerichtet werden. Clients soll es möglich sein, sich in der Domäne anzumelden. {\bf Abgrenzungskriterien}: Es handelt sich hierbei lediglich um eine Testumgebung. Sie ist nicht für den produktiven Einsatz geeignet.\section{Globale Testfälle}
+\noindent{\bf Muss-Kriterien}: Der Zugriff auf das öffentliche IPv6-Internet muss über eine IPv4-Adresse des Providers aus dem internen IPv6-Netzwerk möglich sein. Die interne Netzwerkkommunikation eines Web- und eines Mailservers muss dabei vollständig mit IPv6 realisiert werden. Clients müssen ebenfalls per IPv6 kommunizieren können. Die Testumgebung ist durch eine Firewall zu schützen. {\bf Wunschkriterien}: Optional kann ein Active Directory und ein Domain Controller eingerichtet werden. Clients soll es möglich sein, sich in der Domäne anzumelden. {\bf Abgrenzungskriterien}: Es handelt sich hierbei lediglich um eine Testumgebung. Sie ist nicht für den produktiven Einsatz geeignet.\section{Globale Testfälle}
 
 Wir unterscheiden vier Kategorien von globalen Testfällen zur Bestimmung der Funktionalität. Die erste Kategorie umfasst die Funktionen des Mail- und Webserver und die zweite die Funktion des lokalen Netzwerkes. In der dritten Kategorie werden alle Tests zusammengefasst, die den Zugriff der Clients auf die Server betreffen. Abschließend wird in der vierten Kategorie getestet, ob das Netzwerksegment aus dem öffentlichen Internet erreichbar ist und ob die Services in der DMZ genutzt werden können.
 
