--- a/netzwerk/8gruppe_netzwerkkonzept.tex
+++ b/netzwerk/8gruppe_netzwerkkonzept.tex
@@ -5,3 +5,11 @@
 \subsection{Subnetze}
 
 \subsection{VLANs}
+
+\subsection{DNS}
+
+fastforward.hhbk.de
+	A	212.72.180.241
+	AAAA	(nach Absprache)
+	MX	fastforward.hhbk.de
+	# Kein PTR-Record
