--- a/technische-dokumentation/8gruppe_dokumentation_00_main.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_00_main.tex
@@ -35,6 +35,11 @@
 
 \usepackage{graphicx}
 \usepackage{xcolor}
+
+\definecolor{mygreen}{rgb}{0,0.6,0}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
+
 \usepackage{color}							% Ermöglicht farbigen Text: \textcolor{declared-color}{text}
 											% Bsp.: \textcolor{red}{Dieser Text ist rot}.
 
@@ -66,6 +71,34 @@ m \= m \= m \= m \= m \= m \= m \= m \= m \= m \= m \kill}
   {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
   {€}{{\EUR}}1 {£}{{\pounds}}1
 }
+\lstset{ %
+  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
+  basicstyle=\footnotesize,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  captionpos=b,                    % sets the caption-position to bottom
+  commentstyle=\color{mygreen},    % comment style
+  deletekeywords={...},            % if you want to delete keywords from the given language
+  escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+  frame=single,	                   % adds a frame around the code
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+  keywordstyle=\color{blue},       % keyword style
+  language=Octave,                 % the language of the code
+  otherkeywords={*,...},           % if you want to add more keywords to the set
+  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbersep=5pt,                   % how far the line-numbers are from the code
+  numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
+  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+  showstringspaces=false,          % underline spaces within strings only
+  showtabs=false,                  % show tabs within strings adding particular underscores
+  stepnumber=1,                    % the step between two line-numbers. If it's 1, each line will be numbered
+  stringstyle=\color{mymauve},     % string literal style
+  tabsize=2,	                   % sets default tabsize to 2 spaces
+  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+}
+
 
 %%% Nuetzliche Befehle:
 %Behauptung \footnote{Beweis}; wird automatisch durchnummeriert 
@@ -73,7 +106,7 @@ m \= m \= m \= m \= m \= m \= m \= m \= m \= m \= m \kill}
 %%% Anfang: Generelle Inforationen über das Dokument %%%
 
 \author{Kilian Engelhardt}
-\title{}
+\title{Technische Dokumentation}
 \date{\today}
 
 \usepackage{hyperref}					% Weitere Optionen unter:
@@ -101,14 +134,18 @@ linkcolor=black							% Definiert die Farbe der Links vom Inhaltsverzeichnis
 
 \section{Anmerkungen}
 
-Alle im Projekt verwendeten Passwörter wurden aus Datenschutzgründen in der Dokumentation durch die Zeichenfolge \ql Passwd123\qr\ ersetzt. Alle Kommandoaufrufe wurden zur Vereinfachung als Benutzer root in einer Bash-Shell ausgeführt.\footnote{Um Verwechslungen in der Dokumentation durch ständiges Wechseln zwischen einem Normalbenutzer und dem Superuser, sowie die Verwendung von sudo-Aufrufen und unnötige Komplikationen mit Zugriffsrechten zu vermeiden.}
+Alle im Projekt verwendeten Passwörter wurden aus Datenschutzgründen in der Dokumentation durch die Zeichenfolge \ql password123\qr\ ersetzt. Alle Kommandoaufrufe wurden zur Vereinfachung als Benutzer root in einer Bash-Shell ausgeführt.\footnote{Um Verwechslungen in der Dokumentation durch ständiges Wechseln zwischen einem Normalbenutzer und dem Superuser, sowie die Verwendung von sudo-Aufrufen und unnötige Komplikationen mit Zugriffsrechten zu vermeiden.} Folgt einer Zeile mit einem Kommandoaufruf das Zeichen \textbackslash\ (Backslash), so gehört die nächste Zeile ebenfalls zum Kommandoaufruf.\footnote{Auszug aus man bash: \ql A non-quoted backslash (\textbackslash) is the escape character. It preserves the literal value of the next character that follows, with the exception of <newline>. If a <newline> pair appears, and the backslash is not itself quoted, the <newline> is treated as a line continuation (that is, it is removed from the input stream and effectively ignored).\qr}\newline
 
-\begin{lstlisting}[frame=single,backgroundcolor = \color{lightgray},language=bash]
-> Kommandozeilenaufrufe werden in einem grauen Kasten in Monospace mit
-  einem vorangestellten > (Größer-als-Zeichen) dargestellt.
+\noindent Darstellung von Kommandozeilenaufrufen:
+\begin{lstlisting}[numbers=none]
+> Kommandozeilenaufrufe werden in einem weißen Kasten in Monospace mit einem \
+  vorangestellten > (Größer-als-Zeichen) dargestellt.
 \end{lstlisting}
-
-\noindent Folgt einer Zeile mit einem Kommandoaufruf das Zeichen \textbackslash\ (Backslash), so gehört die nächste Zeile ebenfalls zum Kommandoaufruf.\footnote{Auszug aus man bash: \ql A non-quoted backslash (\textbackslash) is the escape character. It preserves the literal value of the next character that follows, with the exception of <newline>. If a <newline> pair appears, and the backslash is not itself quoted, the <newline> is treated as a line continuation (that is, it is removed from the input stream and effectively ignored).\qr}.
+\noindent Darstellung von Konfigurationen:
+\begin{lstlisting}
+Konfigurationen werden ähnlich wie Kommandozeileaufrufe in einem weißen Kasten  
+dargestellt, jedoch mit nummerierten Zeilen.
+\end{lstlisting}
 
 \include{2jahr_dokumentation_00_kapitel1}
 
