--- a/technische-dokumentation/8gruppe_dokumentation_02.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_02.tex
@@ -1,1 +1,115 @@
-\section{Switch: Konfiguration}
+\section{Router: Konfiguration}
+
+Abweichend von der einleitenden Anmerkung wurden folgende Befehle unter Ciscos iOS verwendet, um die Konfiguration des Routers vorzunehmen.
+
+\begin{lstlisting}[numbers=none]
+#Basics
+r1#conf t
+r1(config)#enable secret password123
+r1(config)#enable password password123
+r1(config)#ipv6 unicast-routing
+r1(config)#ip name-server 8.8.8.8
+
+#Vlan Deklaration
+r1#vlan database 
+r1(vlan)#vlan 10
+r1(vlan)#vlan 20
+r1(vlan)#apply
+r1(vlan)#exit
+
+#Subinterface vlan 10
+r1(config)#interface FastEthernet0/1.10
+r1(config-subif)#description subinterface vlan 10
+r1(config-subif)#encapsulation dot1Q 10
+r1(config-subif)#ipv6 address 2001:4dd0:fc0b:a::1/64
+r1(config-subif)#no shutdown
+r1(config-subif)#exit
+
+#Subinterface vlan 20
+r1(config)#interface FastEthernet0/1.20
+r1(config-subif)#description subinterface vlan 20
+r1(config-subif)#encapsulation dot1Q 20 native
+r1(config-subif)#ipv6 address 2001:4dd0:fc0b:f4::1/64
+r1(config-subif)#no shutdown
+r1(config-subif)#exit
+
+#Interface ins Schulnetz
+r1(config)#interface fastethernet 0/0
+r1(config-if)#ip address 212.72.180.241 255.255.255.224
+r1(config-if)#ip default-gateway 212.72.180.225
+r1(config-if)#no shutdown
+r1(config-if)#exit
+
+#SSH
+r1(config)#ip domain-name fastforward.hhbk.de
+r1(config)#crypto key generate rsa general-keys modulus 1024
+r1(config)#username admin privilege 15 secret password123
+r1(config)#line vty 0 4
+r1(config-line)#transport input telnet ssh
+r1(config-line)#login local
+r1(config-line)#end
+
+#Routing
+r1(config)#ip route 0.0.0.0 0.0.0.0 fastethernet 0/0
+r1(config)#ipv6 route 2001:4dd0:fc0b:a::/64 FastEthernet0/1.10
+r1(config)#ipv6 route 2001:4dd0:fc0b:f4::/64 FastEthernet0/1.20
+
+r1(config)#interface Tunnel61
+r1(config-if)#description 6in4 tunnel to SixXS
+r1(config-if)#no ip address
+r1(config-if)#ip tcp adjust-mss 1420
+r1(config-if)#ipv6 address 2001:4dd0:ff00:147f::2/64
+r1(config-if)#ipv6 enable
+r1(config-if)#tunnel source fastethernet 0/0
+r1(config-if)#tunnel destination 78.35.24.124
+r1(config-if)#tunnel mode ipv6ip
+r1(config-if)#exit
+r1(config)#ipv6 route ::/0 Tunnel61
+
+#Tunnel Prüfen
+r1#show ip interface tunnel61
+r1#show ipv6 interface tunnel61
+
+#Firewalling
+r1(config)#ipv6 access-list from_wan_in
+r1(config-ipv6-acl)#permit icmp any any
+r1(config-ipv6-acl)#permit tcp any any eq 22
+r1(config-ipv6-acl)#permit tcp any any eq www reflect dmz-wan-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq 443 reflect dmz-wan-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq smtp
+r1(config-ipv6-acl)#evaluate wan-dmz-reflexive
+r1(config-ipv6-acl)#evaluate wan-lan-reflexive
+
+r1(config)#interface Tunnel61
+r1(config-if)#ipv6 traffic-filter from_wan_in in
+
+r1(config)#ipv6 access-list dmz_in
+r1(config-ipv6-acl)#permit icmp any any
+r1(config-ipv6-acl)#permit udp any any eq domain reflect wan-dmz-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq 22 reflect wan-dmz-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq www reflect wan-dmz-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq 443 reflect wan-dmz-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq smtp reflect wan-dmz-reflexive timeout 5
+r1(config-ipv6-acl)#evaluate dmz-wan-reflexive
+
+r1(config)#interface FastEthernet0/1.10
+r1(config-if)#ipv6 traffic-filter dmz_in in
+
+r1(config)#ipv6 access-list lan_in
+r1(config-ipv6-acl)#permit icmp any any
+r1(config-ipv6-acl)#permit udp any any eq domain reflect wan-lan-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq 22 reflect wan-lan-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq www reflect wan-lan-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq 443 reflect wan-lan-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq smtp reflect wan-lan-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq ftp reflect wan-lan-reflexive timeout 5
+r1(config-ipv6-acl)#permit tcp any any eq ftp-data reflect wan-lan-reflexive timeout 5
+
+r1(config)#interface FastEthernet0/1.20
+r1(config-if)#ipv6 traffic-filter lan_in in
+
+r1(config)#interface FastEthernet0/0
+r1(config-if)#ip access-group from_wan_in in
+
+r1(config)#do show ipv6 access-list
+\end{lstlisting}
