--- a/technische-dokumentation/8gruppe_dokumentation_01.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_01.tex
@@ -29,7 +29,7 @@
 
 \subsection{DNS}
 
-Folgende DNS-Einstellungen wurden vorgenommen, um den Linux-Server aus dem Internet über die Domain {\sc fastforward.hhbk.de} erreichbar zu machen.
+Folgende DNS-Einstellungen wurden vorgenommen, um den Linux-Server aus dem Internet über die Domain {\texttt fastforward.hhbk.de} erreichbar zu machen.
 \begin{lstlisting}[numbers=none]
 fastforward.hhbk.de.		A		212.72.180.241
 fastforward.hhbk.de.		AAAA 	2001:4dd0:fc0b:a::4
@@ -56,4 +56,8 @@ Client03				& 2001:4dd0:fc0b:f4::c/128		& \\
 
 \subsection{Netzwerkplan}
 
-
+\begin{wrapfigure}{c}{0.5\textwidth}
+\includegraphics[scale=0.5]{8gruppe_dokumentation_pictures/02_JahresProjekt_Netzwerkplan.png}
+\label{realisiertes_netzwerk}
+\caption{Realisiertes Netzwerk}
+\end{wrapfigure}
