--- a/technische-dokumentation/8gruppe_dokumentation_00_main.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_00_main.tex
@@ -35,6 +35,7 @@
 
 \usepackage{graphicx}
 \usepackage{xcolor}
+\usepackage{wrapfig}
 
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
@@ -123,10 +124,9 @@ linkcolor=black							% Definiert die Farbe der Links vom Inhaltsverzeichnis
 %%% Ende: Generelle Inforationen über das Dokument %%%
 
 \setcounter{secnumdepth}{0} 				% Entfernt Nummerierung im TOC
-
 \begin{document}
 \pagestyle{empty}
-\include{2jahr_dokumentation_00_deckblatt}
+\include{8gruppe_dokumentation_00_deckblatt}
 \tableofcontents
 \newpage
 \pagestyle{fancy}
@@ -147,6 +147,6 @@ Konfigurationen werden ähnlich wie Kommandozeileaufrufe in einem weißen Kasten
 dargestellt, jedoch mit nummerierten Zeilen.
 \end{lstlisting}
 
-\include{2jahr_dokumentation_00_kapitel1}
+\include{8gruppe_dokumentation_00_kapitel}
 
 \end{document}
