--- a/technische-dokumentation/8gruppe_dokumentation_03.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_03.tex
@@ -1,1 +1,51 @@
 \section{Switch: Konfiguration}
+
+Abweichend von der einleitenden Anmerkung wurden folgende Befehle unter Ciscos iOS verwendet, um die Konfiguration des Switches vorzunehmen.
+
+\begin{lstlisting}[numbers=none]
+#Basic
+switch(config)#enable secret Willkommen2016
+switch(config)#enable password Willkommen2016
+switch(config)#sdm prefer dual-ipv4-and-ipv6
+switch(config)#end
+switch# reload
+
+#Vlan Deklaration
+switch#vlan database 
+switch(vlan)#vlan 10
+switch(vlan)#vlan 20
+switch(vlan)#exit
+
+#interface vlan 10
+switch(config)#interface range gigabitEthernet f0/1-24 
+Switch(config-if-range)#switchport access vlan 10
+Switch(config-if-range)#end
+Switch(config)#interface vlan 10
+Switch(config-if)#ipv6 address 2001:4dd0:fc0b:a::2/64
+Switch(config-if)#no shut down
+Switch(config-if)#exit
+
+#interface vlan 20
+switch(config)# interface range gigabitEthernet f0/25-46
+Switch(config-if-range)# switchport access vlan 20
+Switch(config-if-range)# end
+Switch(config)#interface vlan 20
+Switch(config-if)#ipv6 address 2001:4dd0:fc0b:f4::2/64
+Switch(config-if)#no shut down
+Switch(config-if)# exit
+
+#trunk
+switch(config)#interface gigabitEthernet 0/43
+Switch(config-if)#switchport mode trunk
+Switch(config-if)#switchport trunk native vlan 20
+Switch(config-if)#switchport trunk allowed vlan 10,20
+
+#SSH
+Switch(config)#ip domain-name fastforward.hhbk.de
+Switch(config)#crypto key generate rsa general-keys modulus 1024
+Switch(config)#username admin privilege 15 secret Willkommen2016
+Switch(config)#line vty 0 4
+Switch(config-line)#transport input telnet ssh
+Switch(config-line)#login local
+Switch(config-line)#en
+\end{lstlisting}
